--- a/7.3.0/aspnet-core/src/MyOrganization.Web.Host/appsettings.json
+++ b/7.3.0/aspnet-core/src/MyOrganization.Web.Host/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=localhost\\SQLExpress; Database=MyOrganizationDb; Trusted_Connection=True;"
+    "Default": "Server=YourSQLServer; Database=YourDBName; Trusted_Connection=True;"
   },
   "App": {
     "ServerRootAddress": "https://localhost:44311/",
